[package]
name = "thruster"
version = "0.1.0"
authors = ["Alec Deason <alec@tinycountry.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minilp = "*"
bevy = { version="*", default-features = false }
bevy_rapier2d = { version = "*", default-features = false, features=["dim2"] }
serde = "*"
